--- a/spring-social/src/main/resources/application.yml
+++ b/spring-social/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     datasource:
         url: jdbc:mysql://localhost:3306/spring_social?useSSL=false
         username: root
-        password: callicoder
+        password: root
 
     jpa:
         show-sql: true
